[package]
name = "rs-image"
description = "A Rust library for image processing"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.25.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"
incremental = false
strip = true
